@@ -9,7 +9,9 @@ Pyclewn 2.0.1
 Bug fixes
 ^^^^^^^^^
 
-* Display also the watchpoints in the breakpoints window.
+* The ':Pyclewn' command can now be used reliably in a Vim script.
+
+* The watchpoints are also displayed in the breakpoints window.
 
 * The ``Cquit`` command cannot start a new gdb session anymore.
 
